--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,5 +15,14 @@ products:
     MaxAutoRetriesNextServer: 3
     OkToRetryOnAllOperations: true
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/gateway?useUnicode=true&characterEncoding=utf-8
+    username: root
+    password: 123456
+
+  jpa:
+    show-sql: true
+
 server:
   port: 8080
