--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	compile('org.springframework.retry:spring-retry')
 	compile("org.springframework.boot:spring-boot-starter-security")
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-server')
 	compile('com.google.code.gson:gson:2.8.5')
 	compile('org.flywaydb:flyway-core')
 	compile('mysql:mysql-connector-java')
